--- a/shose/shose.html
+++ b/shose/shose.html
@@ -36,10 +36,44 @@
     </p>
 
   </div>
+  <div><div class="form-background">
+    <div class="form-white">
+      <form action="" method="post">
+        <div class="w-100">
+          <h3>Contact Us</h3>
+          <p>Your Email</p>
+          <input type="email" class="form-input"
+          placeholder="Enter your email" name="email">
+        </div>
+      
+          <div class= "w-50">
+          <p>First Name</p>
+          <input type="text" class ="form-input"
+          name="first-name">
+        </div>
+        <div class="w-50">
+          <p>Last Name</p>
+          <input type="text" class ="form-input" name = "last-name">
+          <div style="clear: both;"> </div>
+        </div>
+        <div class="w-100">
+        <p>Message</p>
+        <textarea name="message" id=""
+        class="form-input"></textarea>
+      </div>
+      <div class="w-100">
+        <input type="checkbox" name="" id="sub" class="">
+        <label for="sub">Subscribe</label>
+        <!--button class=" btn yellow-button">SEND</!--button-->
+        <input type="submit">
 
-  <!--폼 작업-->
-  <form action="">
-    
-  </form>
+      </div>
+      </form>
+
+    </div>
+  </div>
+
+
+  
 </body>
 </html>
