미디어쿼리 완성

--- a/shose/shose.html
+++ b/shose/shose.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./css/shoes.css">
   <title>Document</title>
 </head>
-<body>
+<div>
     <div class="nav-container">
       <div class="nav-item">Shoseshop</div>
       <div class="nav-item">Products</div>
@@ -42,7 +42,28 @@
     </p>
 
   </div>
-  <div><div class="form-background">
+  <!-- 미디어쿼리를 활용한 정렬연습-->
+   <div class="product-container">
+    <div>
+      <h4>Fast Shipping</h4>
+      <p>lorem ipsum</p>
+    </div>
+    <div>
+      <h4>Fast Shipping</h4>
+      <p>lorem ipsum</p>
+    </div>
+    <div>
+      <h4>Fast Shipping</h4>
+      <p>lorem ipsum</p>
+    </div>
+    <div>
+      <h4>Fast Shipping</h4>
+      <p>lorem ipsum</p>
+    </div>
+    <div style=" float: none; clear: both;"></div>
+   </div>
+   
+  <div class="form-background">
     <div class="form-white">
       <form action="" method="post">
         <div class="w-100">
@@ -75,11 +96,8 @@
 
       </div>
       </form>
-
     </div>
   </div>
-
-
-  
+</div>
 </body>
 </html>
