--- a/shose/shose.html
+++ b/shose/shose.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/shoes.css">
   <title>Document</title>
 </head>
@@ -63,6 +64,38 @@
     <div style=" float: none; clear: both;"></div>
    </div>
    
+
+   <div class="product-container">
+    <div>
+      <i class="fa-solid fa-cart-shopping fa-3x"></i>
+      <h4>Fast Shipping</h4>
+      <p>We Ship faster than other shop</p>
+    </div>
+   
+
+   <i class="fa-solid fa-earth-asia fa-3x" ></i>
+   <h4>Good service</h4>
+   <p>We Ship faster than other shop</p>
+ </div>
+
+
+ <i class="fa-solid fa-user fa-3x" ></i>
+ <h4>Free coupons</h4>
+ <p>We Ship faster than other shop</p>
+</div>
+
+<i class="fa-solid fa-shirt fa-3x"></i>
+<h4>New Ptoducts</h4>
+<p>We Ship faster than other shop</p>
+<div>
+
+</div>
+</div>
+
+
+
+
+
   <div class="form-background">
     <div class="form-white">
       <form action="" method="post">
