--- a/shose/shose.html
+++ b/shose/shose.html
@@ -65,6 +65,7 @@
    </div>
    
 
+  <!-- FontAwesome 을 활용한 이미지 처리 -->
    <div class="product-container">
     <div>
       <i class="fa-solid fa-cart-shopping fa-3x"></i>
@@ -72,29 +73,66 @@
       <p>We Ship faster than other shop</p>
     </div>
    
-
+    <div>
    <i class="fa-solid fa-earth-asia fa-3x" ></i>
    <h4>Good service</h4>
    <p>We Ship faster than other shop</p>
  </div>
 
-
+ <div>
  <i class="fa-solid fa-user fa-3x" ></i>
  <h4>Free coupons</h4>
  <p>We Ship faster than other shop</p>
 </div>
 
+
+<div>
 <i class="fa-solid fa-shirt fa-3x"></i>
 <h4>New Ptoducts</h4>
 <p>We Ship faster than other shop</p>
-<div>
-
 </div>
+<div style=" float: none; clear: both;"></div>
 </div>
 
 
 
 
+<!--상품이미지 진열하기-->
+
+<div class="shop-bg">
+  <div class="shop-container">
+    <div class="shop-item">
+      <div style="position: relative;">
+      <div class="overlay"></div>
+      <div>
+        <img src="./img/product1.jpg" alt="신발">
+      </div>
+    </div>
+  </div>
+
+
+    <div class="shop-item">
+      <div style="position:relative;">
+      <div class="overlay"></div>
+      <div>
+        <img src="./img/product2.jpg" alt="신발">
+      </div>
+    </div>
+  </div>
+
+
+    <div class="shop-item">
+      <div style="position: relative;">
+      <div class="overlay"></div>
+      <div>
+        <img src="./img/product3.jpg" alt="신발">
+      </div>
+    </div>
+  </div>
+
+    
+  </div>
+</div>
 
   <div class="form-background">
     <div class="form-white">
