--- a/ex/ex.html
+++ b/ex/ex.html
@@ -7,14 +7,24 @@
   <title>Document</title>
 </head>
 <body>
-   <h4 id="navigation-title"> 
-    안녕하세요.
-   </h4>
-   <ul>
-    <li class="item">HOME</li>
-    <li class="item">Mac</li>
-    <li class="item">iPhone</li>
-    <li class="item">iPad</li>
-   </ul>
+  <div class="box1">
+    <img src="https://studiomeal.com/data/code/images/ilbuni-s.png" alt="일분이">
+    <img src="https://studiomeal.com/data/code/images/ramengirl-s.png" alt="라면소녀">
+    나는 일분이야. 얜 내 친구 <a href="https://youtube.com/라면소녀">라면소녀</a>야!
+  </div>
+  <p class="box2">Lorem ipsum dolor sit amet consectetu.</p>
+
+
+
+
+<div class="box3">
+  <img src="https://studiomeal.com/data/code/images/ilbuni-s.png" alt="일분이">
+    <img src="https://studiomeal.com/data/code/images/ramengirl-s.png" alt="라면소녀">
+   
+    나는 일분이야. 얜 내 친구 .. <a href="https://youtube.com/라면소녀">라면소녀</a>야
+</div>
+
+<p class="box4">Lorem ipsum dolor sit amet consectetu.</p>
+
 </body>
 </html>
